@startuml

' Template file to use to create the diagrams od the packages.
' Every file must have a sub part called INTERNAL with the internal connections of the package and
' a sub part called EXTERNAL with the external parts.
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL

package src.engine.scene.map_transformation {
    class src.engine.scene.map_transformation.MapTransformation
    class src.engine.scene.map_transformation.MergeMapsTransformation
    class src.engine.scene.map_transformation.FillNanMapTransformation
    class src.engine.scene.map_transformation.InterpolateNanMapTransformation
    class src.engine.scene.map_transformation.NanConvolutionMapTransformation
    class src.engine.scene.map_transformation.SubtractMap
    class src.engine.scene.map_transformation.ReplaceNanValuesInMap
}

src.engine.scene.map_transformation.MergeMapsTransformation -u-|> src.engine.scene.map_transformation.MapTransformation
src.engine.scene.map_transformation.FillNanMapTransformation -u-|> src.engine.scene.map_transformation.MapTransformation
src.engine.scene.map_transformation.InterpolateNanMapTransformation -u-|> src.engine.scene.map_transformation.MapTransformation
src.engine.scene.map_transformation.NanConvolutionMapTransformation -u-|> src.engine.scene.map_transformation.MapTransformation
src.engine.scene.map_transformation.SubtractMap -u-|> src.engine.scene.map_transformation.MapTransformation
src.engine.scene.map_transformation.ReplaceNanValuesInMap -u-|> src.engine.scene.map_transformation.MapTransformation
!endsub

!startsub EXTERNAL
    src.engine.scene.map_transformation.MapTransformation <..> src.engine.scene.Scene

    src.engine.scene.map_transformation.MapTransformation ..> src.error.MapTransformationError

    src.engine.scene.map_transformation.MergeMapsTransformation ..> src.error.MapTransformationError
    src.engine.scene.map_transformation.MergeMapsTransformation ..> src.engine.scene.geometrical_operations

    src.engine.scene.map_transformation.FillNanMapTransformation ..> src.error.MapTransformationError
    src.engine.scene.map_transformation.FillNanMapTransformation ..> src.engine.scene.geometrical_operations

    src.engine.scene.map_transformation.InterpolateNanMapTransformation ..> src.error.MapTransformationError
    src.engine.scene.map_transformation.InterpolateNanMapTransformation ..> src.engine.scene.geometrical_operations

    src.engine.scene.map_transformation.NanConvolutionMapTransformation ..> src.error.MapTransformationError

    src.engine.scene.map_transformation.SubtractMap ..> src.error.MapTransformationError

    src.engine.scene.map_transformation.ReplaceNanValuesInMap ..> src.error.MapTransformationError
!endsub


' Code that will affect only the current diagram
' can be messy since it will not be imported
hide members

@enduml